# PCM2WAV

./: .gitignore  AGENTS.md  AGENT_TEAM_SETUP.md  CLAUDE.md  main.py  pyproject.toml
.claude/: settings.json  verification-policy.json
.claude/hooks/: enforce_verification.py  post_commit_worklog.py  reset_verification.py
docs/runbooks/weekly/: 2026-03-17-project-setup-worklog.md
pcm2wav/: __init__.py  analyzer.py  app.py  converter.py  models.py  presets.py  widgets.py
plans/: enchanted-inventing-whisper.md
tests/: conftest.py  test_analyzer.py  test_app.py  test_converter.py  test_models.py  test_presets.py  test_widgets.py
